[package]
name = "keyframes-aux2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
aviutl2 = { version = "0.29.0", features = ["serde"] }
aviutl2-eframe = "0.29.0"
dashmap = "6.2.1"
lazy-regex = "3.6.0"
serde = { version = "1.0.228", features = ["derive"] }
tap = "1.0.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
windows = { version = "0.62.2", features = ["Win32_UI_HiDpi"] }
